2007-03-10  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http.erl: Support for binaries in ejabberd HTTP
	server (Thanks to Massimiliano Mirra) (EJAB-197).

	* src/configure.ac: autoconf improvements (thanks to Tony Finch) (EJAB-204).
	* src/aclocal.m4: Likewise.
					 
	* src/odbc/ejabberd_odbc.erl: ejabberd admin can now choose the
	relational database port to user from ejabberd configuration
	file (EJAB-195).
	* src/doc/guide.tex: Likewise.

2007-03-02  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_log.erl: Fix wrong return on check access log.

2007-03-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

2007-02-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix

	* src/mod_proxy65/mod_proxy65_sm.erl: Cluster support (thanks to
	Evgeniy Khramtsov)

	* src/mod_proxy65/mod_proxy65_stream.erl: Code cleanup (thanks to
	Evgeniy Khramtsov)

	* src/mod_proxy65/mod_proxy65.hrl: Fixed typo (thanks to Evgeniy
	Khramtsov)

2007-02-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Init shaper with a default value first
	after stream opening

	* src/ejabberd_c2s.erl: Log failed SASL login attempts
	* src/cyrsasl.erl: Updated API
	* src/cyrsasl_plain.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise

2007-02-19  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Added an option set affiliations.

	* doc/api/*: Added Erlang documentation generation script
	(EJAB-188).
	* doc/version.tex: Updated.
	* src/ejabberd.app: Updated.

	* src/odbc/pg.sql: last table, state column cannot be NULL
	(EJAB-191).
	* src/odbc/mysql.sql: likewise.
	* src/odbc/mssql.sql: likewise.

	* src/ejabberd_auth_ldap.erl: prevent anonymous bind on LDAP
	servers as ejabberd is providing other anonymous authentication
	mechanism
	(EJAB-190).

	* src/cyrsasl_plain.erl: bad-auth error code replaced by